# FFReadWriter

./: .gitignore  CMakeLists.txt  Info.plist  Package.swift
Sources/FFReadWriter/: LXAVFrameConvert.cpp  LXAVFrameConvert.hpp  LXFrameUtils.cpp  LXFrameUtils.hpp  LXVideoFrame.cpp  VideoReader.cpp  VideoWriter.cpp
Sources/FFReadWriter/Objc/: FormatUtils.h  FormatUtils.mm  LXDebugFrame.h  LXDebugFrame.mm  objc.cmake
Sources/FFReadWriter/ffmpeg-sdk-osx/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libpostproc.pc  libswresample.pc  libswscale.pc
Sources/Modules/: module.modulemap
Sources/include/: FFReadWriter.h  LXVideoFrame.hpp  VideoReader.hpp  VideoWriter.hpp
Tests/FFReadWriterTests/: FFReadWriterTests.swift
